--- a/Practice/Practice_ggplot2.qmd
+++ b/Practice/Practice_ggplot2.qmd
@@ -274,7 +274,7 @@ ggplot(
 ### 1.4.3 Exercises
 
 1.  Make a bar plot of `species` of `penguins`, where you assign `species` to the `y` aesthetic. How is this plot different?
-    -   In this case, it's a bar plot of categorical data with speceis on Y axes and on x axes we have the counts for each species
+    -   In this case, it's a bar plot of categorical data with species on Y axes and on x axes we have the counts for each species
 
 ```{r}
 ggplot(penguins, aes(y = species))+
@@ -288,4 +288,35 @@ To get from Top to Bottom add: `fct_rev`
 ```{r}
 ggplot(penguins, aes(y = fct_rev(fct_infreq(species)))) +
   geom_bar()
+```
+
+2.  How are the following two plots different? Which aesthetic, `color` or `fill`, is more useful for changing the color of bars?
+    -   First plot provides colors of the outline of the bars, while the second plot fills the bars with solid color. `fill` is more useful
+
+```{r}
+ggplot(
+  penguins,
+  aes(x = species)
+) +
+  geom_bar(color = "red")
+```
+
+```{r}
+ggplot(
+  penguins,
+  aes(x = species)
+) +
+  geom_bar(fill = "red")
+```
+
+3.  What does the `bins` argument in [`geom_histogram()`](https://ggplot2.tidyverse.org/reference/geom_histogram.html) do?
+    -   impose the number of bins and overrides the `binwidth`
+4.  Make a histogram of the `carat` variable in the `diamonds` dataset that is available when you load the tidyverse package. Experiment with different binwidths. What binwidth reveals the most interesting patterns?
+
+```{r}
+ggplot(
+  diamonds,
+  aes(x = carat)
+) +
+  geom_histogram(binwidth = 1)
 ```
