--- a/Practice/Practice_ggplot2.qmd
+++ b/Practice/Practice_ggplot2.qmd
@@ -406,3 +406,93 @@ ggplot(penguins, aes(x = flipper_length_mm, y = body_mass_g)) +
 ```
 
 ### 1.5.5. Excercises
+
+1.  The `mpg` data frame that is bundled with the ggplot2 package contains 234 observations collected by the US Environmental Protection Agency on 38 car models. Which variables in `mpg` are categorical? Which variables are numerical? (Hint: Type [`?mpg`](https://ggplot2.tidyverse.org/reference/mpg.html) to read the documentation for the dataset.) How can you see this information when you run `mpg`?
+
+    -   Use `glimpse()` function
+
+2.  Make a scatterplot of `hwy` vs. `displ` using the `mpg` data frame. Next, map a third, numerical variable to `color`, then `size`, then both `color` and `size`, then `shape`. How do these aesthetics behave differently for categorical vs. numerical variables?
+
+    -   numerical gives a color **gradient**, while categorical gives **distinct** colors
+
+```{r}
+ggplot(mpg, aes(x = displ, y = hwy)) +
+  geom_point()
+```
+
+```{r}
+ggplot(mpg, aes(x = displ, y = hwy)) +
+  geom_point(aes(color = cty))
+```
+
+```{r}
+ggplot(mpg, aes(x = displ, y = hwy)) +
+  geom_point(aes(color = drv))
+```
+
+3.  In the scatterplot of `hwy` vs. `displ`, what happens if you map a third variable to `linewidth`?
+    -   in `geom_point` there's no `linewidth`
+
+```{r}
+ggplot(mpg, aes(x = displ, y = hwy)) +
+  geom_point(aes(linewidth = drv))
+```
+
+4.  What happens if you map the same variable to multiple aesthetics? they all map to that variable
+
+5.  Make a scatterplot of `bill_depth_mm` vs. `bill_length_mm` and color the points by `species`. What does adding coloring by species reveal about the relationship between these two variables? *I can clearly see three clusters.* What about faceting by `species`? *it makes it even clearer*
+
+    ```{r}
+    ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
+      geom_point(aes(color = species))
+
+    ```
+
+    ```{r}
+    ggplot(penguins, aes(x = bill_length_mm, y = bill_depth_mm)) +
+      geom_point(aes(color = species)) +
+      facet_wrap(~species)
+    ```
+
+6.  Why does the following yield two separate legends? How would you fix it to combine the two legends?
+
+```{r}
+ggplot(
+  data = penguins,
+  mapping = aes(
+    x = bill_length_mm, y = bill_depth_mm, 
+    color = species, shape = species
+  )
+) +
+  geom_point() +
+  labs(color = "Species", shape = "Species")
+```
+
+7.  Create the two following stacked bar plots. Which question can you answer with the first one? Which question can you answer with the second one?
+
+```{r}
+ggplot(penguins, aes(x = island, fill = species)) +
+  geom_bar(position = "fill")
+```
+
+```{r}
+ggplot(penguins, aes(x = species, fill = island)) +
+  geom_bar(position = "fill")
+```
+
+### 1.6. saving the plots
+
+use `ggsave()`
+
+```{r}
+ggplot(
+  data = penguins,
+  mapping = aes(
+    x = bill_length_mm, y = bill_depth_mm, 
+    color = species, shape = species
+  )
+) +
+  geom_point() +
+  labs(color = "Species", shape = "Species")
+ggsave(filename = "penguin.pdf")
+```
